partner page block alignment issue fixed

--- a/cms/static/css/styles.css
+++ b/cms/static/css/styles.css
@@ -3958,6 +3958,7 @@ input[type=checkbox]:checked + label {
   text-align:left;
   float:right;
   padding-right:15px;
+  width: 100%;
 }
 
 @media (max-width: 991px) {
